--- a/package.json
+++ b/package.json
@@ -1,64 +1,71 @@
 {
-  "name": "IJzersterk",
-  "version": "1.0.1",
-  "description": "The frontend of DSKV IJzersterk website",
-  "main": "app.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/danielcolon/ijzersterk"
-  },
-  "keywords": [
-    "ijzersterk",
-    "dskv",
-    "delft"
-  ],
-  "author": "DSKV IJzersterk",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/danielcolon/ijzersterk/issues"
-  },
-  "homepage": "http://www.ijzersterkdelft.nl",
+  "name": "tud-scheduler",
+  "version": "1.0.0",
+  "description": "Helps you to orginize/select/overview your TU Delft Master courses",
+  "main": "gulpfile.js",
   "dependencies": {
     "autoprefixer-core": "^5.2.1",
     "babel": "^5.8.23",
-    "babel-eslint": "^3.1.15",
-    "babelify": "^6.1.2",
+    "babel-eslint": "^3.1.30",
+    "babelify": "^6.3.0",
     "bootstrap": "^3.3.5",
-    "browser-sync": "^2.7.11",
-    "browserify": "^10.2.4",
+    "browser-sync": "^2.9.3",
+    "browserify": "^10.2.6",
     "classnames": "^2.1.3",
-    "del": "^1.2.0",
+    "del": "^1.2.1",
     "eslint": "^0.23.0",
-    "eslint-plugin-react": "^2.5.2",
+    "eslint-plugin-react": "^2.7.1",
     "eventemitter2": "^0.4.14",
     "gulp": "^3.9.0",
-    "gulp-changed": "^1.2.1",
+    "gulp-changed": "^1.3.0",
     "gulp-csso": "^1.0.0",
     "gulp-eslint": "^0.14.0",
-    "gulp-image": "^1.0.4",
+    "gulp-image": "^1.0.5",
     "gulp-less": "^3.0.3",
+    "gulp-postcss": "^5.1.10",
     "gulp-notify": "^2.2.0",
-    "gulp-postcss": "^5.1.9",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.4.0",
-    "lodash": "^3.10.0",
+    "gulp-uglify": "^1.4.1",
+    "lodash": "^3.10.1",
+    "gulp-zip": "^3.0.2",
     "moment": "^2.10.6",
     "react": "^0.13.3",
-    "react-bootstrap": "^0.24.3",
+    "react-bootstrap": "^0.24.5",
     "react-datepicker": "^0.12.0",
     "react-debounce-input": "^1.1.1",
     "react-grid-layout": "^0.8.5",
     "react-router": "^0.13.3",
-    "react-router-bootstrap": "^0.18.0",
+    "react-router-bootstrap": "^0.18.1",
     "react-tools": "^0.13.3",
+    "run-sequence": "^1.1.2",
     "reactify": "^1.1.1",
-    "superagent": "^1.2.0",
+    "superagent": "^1.3.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.2"
+    "watchify": "^3.4.0"
   },
-  "devDependencies": {
-    "gulp-zip": "^3.0.2",
-    "run-sequence": "^1.1.2"
-  }
+  "devDependencies": {},
+  "scripts": {
+    "test": "gulp lint"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Pouja/tudscheduler.git"
+  },
+  "keywords": [
+    "tud",
+    "delft",
+    "master",
+    "cs",
+    "computer",
+    "science",
+    "react",
+    "scheduler"
+  ],
+  "author": "Pouja Nikray",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Pouja/tudscheduler/issues"
+  },
+  "homepage": "https://github.com/Pouja/tudscheduler"
 }
