--- a/package.json
+++ b/package.json
@@ -22,23 +22,24 @@
     "gulp-eslint": "^0.14.0",
     "gulp-image": "^1.0.5",
     "gulp-less": "^3.0.3",
-    "gulp-postcss": "^5.1.10",
     "gulp-notify": "^2.2.0",
+    "gulp-postcss": "^5.1.10",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.4.1",
-    "lodash": "^3.10.1",
     "gulp-zip": "^3.0.2",
+    "lodash": "^3.10.1",
     "moment": "^2.10.6",
     "react": "^0.13.3",
     "react-bootstrap": "^0.24.5",
     "react-datepicker": "^0.12.0",
     "react-debounce-input": "^1.1.1",
     "react-grid-layout": "^0.8.5",
+    "react-notify": "^1.0.1",
     "react-router": "^0.13.3",
     "react-router-bootstrap": "^0.18.1",
     "react-tools": "^0.13.3",
-    "run-sequence": "^1.1.2",
     "reactify": "^1.1.1",
+    "run-sequence": "^1.1.2",
     "superagent": "^1.3.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
