--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-postcss": "^5.1.10",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.4.1",
+    "gulp-version-append": "0.0.3",
     "gulp-zip": "^3.0.2",
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
