Updates all dependencies and renamed scripts to src

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,7 @@
   "rules": {
     "quotes": [2, "single"],
     "eqeqeq": [2, "smart"],
-    "space-after-keywords": 2,
+    "keyword-spacing": 2,
     "no-console": 1
   }
 }
