--- a/package.json
+++ b/package.json
@@ -4,49 +4,56 @@
   "description": "Helps you to orginize/select/overview your TU Delft Master courses",
   "main": "gulpfile.js",
   "dependencies": {
-    "autoprefixer-core": "^5.2.1",
-    "babel": "^5.8.23",
-    "babel-eslint": "^3.1.30",
-    "babelify": "^6.3.0",
-    "bootstrap": "^3.3.5",
-    "browser-sync": "^2.9.3",
-    "browserify": "^10.2.6",
-    "classnames": "^2.1.3",
-    "del": "^1.2.1",
-    "eslint": "^0.23.0",
-    "eslint-plugin-react": "^2.7.1",
-    "gulp": "^3.9.0",
-    "gulp-changed": "^1.3.0",
-    "gulp-csso": "^1.0.0",
-    "gulp-eslint": "^0.14.0",
-    "gulp-image": "^1.0.5",
-    "gulp-less": "^3.0.3",
+    "autoprefixer": "^6.3.6",
+    "babel": "^6.5.2",
+    "babel-core": "^6.7.7",
+    "babel-eslint": "^6.0.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.7.2",
+    "babelify": "^7.3.0",
+    "bootstrap": "^3.3.6",
+    "browser-sync": "^2.12.5",
+    "browserify": "^13.0.0",
+    "eslint": "^2.8.0",
+    "eslint-config-airbnb": "^8.0.0",
+    "eslint-plugin-import": "^1.6.0",
+    "eslint-plugin-jsx-a11y": "^1.0.3",
+    "eslint-plugin-react": "^5.0.1",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^2.0.0",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-html-replace": "^1.5.5",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-less": "^3.1.0",
     "gulp-notify": "^2.2.0",
-    "gulp-postcss": "^5.1.10",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.4.1",
-    "gulp-version-append": "0.0.3",
-    "gulp-zip": "^3.0.2",
-    "lodash": "^3.10.1",
-    "moment": "^2.10.6",
-    "react": "^0.13.3",
-    "react-bootstrap": "^0.24.5",
-    "react-datepicker": "^0.12.0",
-    "react-debounce-input": "^1.1.1",
-    "react-grid-layout": "^0.8.5",
-    "react-notify": "^1.0.1",
-    "react-router": "^0.13.3",
-    "react-router-bootstrap": "^0.18.1",
-    "react-tools": "^0.13.3",
-    "reactify": "^1.1.1",
-    "run-sequence": "^1.1.2",
+    "gulp-postcss": "^6.1.0",
+    "gulp-sourcemaps": "^2.0.0-alpha",
+    "gulp-uglify": "^1.5.3",
+    "gulp-version-append": "^0.2.0",
+    "history": "^2.1.0",
+    "imagemin-pngquant": "^4.2.2",
+    "lodash": "^4.11.1",
+    "react": "^15.0.1",
+    "react-addons": "^0.9.0",
+    "react-addons-test-utils": "^15.0.1",
+    "react-bootstrap": "^0.29.4",
+    "react-debounce-input": "^2.3.1",
+    "react-dom": "^15.0.1",
+    "react-grid-layout": "^0.12.4",
+    "react-router": "^2.3.0",
+    "rimraf": "^2.5.2",
+    "run-sequence": "^1.1.5",
+    "tap-nyan": "0.0.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.4.0"
+    "watchify": "^3.7.0"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "gulp lint"
+    "start": "npm run watch",
+    "watch": "gulp watch",
+    "build": "gulp build",
+    "deploy": "gulp deploy"
   },
   "repository": {
     "type": "git",
