--- a/package.json
+++ b/package.json
@@ -4,14 +4,7 @@
   "description": "Helps you to orginize/select/overview your TU Delft Master courses",
   "main": "gulpfile.js",
   "dependencies": {
-    "history": "^2.1.0",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "react-router": "^2.3.0"
-  },
-  "devDependencies": {
     "autoprefixer": "^6.3.6",
-    "ava": "^0.14.0",
     "babel": "^6.5.2",
     "babel-core": "^6.7.7",
     "babel-eslint": "^6.0.4",
@@ -19,9 +12,9 @@
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.7.2",
     "babelify": "^7.3.0",
+    "bootstrap": "^3.3.6",
     "browser-sync": "^2.12.5",
     "browserify": "^13.0.0",
-    "cssnano": "^3.5.2",
     "eslint": "^2.8.0",
     "eslint-config-airbnb": "^8.0.0",
     "eslint-plugin-import": "^1.6.0",
@@ -32,17 +25,26 @@
     "gulp-gh-pages": "^0.5.4",
     "gulp-html-replace": "^1.5.5",
     "gulp-imagemin": "^2.4.0",
+    "gulp-less": "^3.1.0",
+    "gulp-minify-css": "^1.2.4",
     "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^2.0.0-alpha",
     "gulp-uglify": "^1.5.3",
+    "history": "^2.1.0",
     "imagemin-pngquant": "^4.2.2",
     "lodash": "^4.11.1",
-    "postcss-nested": "^1.0.0",
-    "postcss-simple-extend": "^1.0.0",
-    "postcss-simple-vars": "^1.2.0",
+    "react": "^15.0.1",
+    "react-addons": "^0.9.0",
     "react-addons-test-utils": "^15.0.1",
+    "react-bootstrap": "^0.29.4",
+    "react-debounce-input": "^2.3.1",
+    "react-dom": "^15.0.1",
+    "react-grid-layout": "^0.12.4",
+    "react-router": "^2.3.0",
     "rimraf": "^2.5.2",
     "run-sequence": "^1.1.5",
     "tap-nyan": "0.0.2",
