--- a/package.json
+++ b/package.json
@@ -26,14 +26,11 @@
     "gulp-html-replace": "^1.5.5",
     "gulp-imagemin": "^2.4.0",
     "gulp-less": "^3.1.0",
-    "gulp-minify-css": "^1.2.4",
     "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^2.0.0-alpha",
     "gulp-uglify": "^1.5.3",
+    "gulp-version-append": "^0.2.0",
     "history": "^2.1.0",
     "imagemin-pngquant": "^4.2.2",
     "lodash": "^4.11.1",
