STarted with the view of generating your ISP
For now commented out the year view and replaced it with the ISP select
view. For now it generates the fields based on a constant file with
given options like: name, maxEC, maxCourses etc.

You can drag n drop the courses from your selected course to the isp
fields.

Still a lot to do:
 - Introduce states: to switch from year view to select view
 - Check for constraints and visiualize it for the user
 - save/load
 - generating an html page which is printable

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-addons-test-utils": "^15.0.1",
     "react-bootstrap": "^0.29.4",
     "react-debounce-input": "^2.3.1",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.0.1",
     "react-grid-layout": "^0.12.4",
     "react-router": "^2.3.0",
