--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "node": true,
     "mocha": true
   },
+  // "extends": ["eslint:recommended", "plugin:react/recommended"], //TODO
   /**
    * The rules are partially from airbnb
    */
