--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.0.1",
+    "react-fa": "^4.1.2",
     "react-grid-layout": "^0.12.4",
     "react-router": "^2.4.1",
     "rimraf": "^2.5.2",
