--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tud-scheduler",
-  "version": "2.0.0-alpha",
+  "version": "2.0.0-alpha2",
   "description": "Helps you to orginize/select/overview your TU Delft Master courses",
   "main": "gulpfile.js",
   "dependencies": {
